// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput/> render() should render a closed dropdown because input is empty 1`] = `
<div
  class="dropdown show"
>
  <div
    aria-expanded="true"
    aria-haspopup="true"
    class="input-icon input-icon-right"
    data-toggle="dropdown"
  >
    <div
      class="wrapper isFocused"
    >
      <input
        class="input"
        id="input-text-2"
        name="input-text-2"
        placeholder="Search..."
        type="text"
        value=""
      />
      <span
        class="suffix"
      >
        <i
          class="material-icons icon"
        >
          more_horiz
        </i>
      </span>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="dropdown dropdown-menu show"
    role="menu"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
    tabindex="-1"
  >
    <h6
      class="header dropdown-header"
      tabindex="-1"
    >
      0 result
    </h6>
  </div>
</div>
`;

exports[`<SearchInput/> render() should render a closed dropdown because input is not focused 1`] = `
<div
  class="dropdown"
>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    class="input-icon input-icon-right"
    data-toggle="dropdown"
  >
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-1"
        name="input-text-1"
        placeholder="Search..."
        type="text"
        value=""
      />
      <span
        class="suffix"
      >
        <i
          class="material-icons icon"
        >
          more_horiz
        </i>
      </span>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="header dropdown-header"
      tabindex="-1"
    >
      0 result
    </h6>
  </div>
</div>
`;

exports[`<SearchInput/> render() should render an open dropdown because input is focused and value is not empty 1`] = `
<div
  class="dropdown show"
>
  <div
    aria-expanded="true"
    aria-haspopup="true"
    class="input-icon input-icon-right"
    data-toggle="dropdown"
  >
    <div
      class="wrapper isFocused"
    >
      <input
        class="input"
        id="input-text-3"
        name="input-text-3"
        placeholder="Search..."
        type="text"
        value="foo"
      />
      <span
        class="suffix"
      >
        <i
          class="material-icons icon"
        >
          more_horiz
        </i>
      </span>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="dropdown dropdown-menu show"
    role="menu"
    style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
    tabindex="-1"
  >
    <h6
      class="header dropdown-header"
      tabindex="-1"
    >
      0 result
    </h6>
  </div>
</div>
`;

exports[`<SearchInput/> render() should render sub results 1`] = `
<div
  class="dropdown show"
>
  <div
    aria-expanded="true"
    aria-haspopup="true"
    class="input-icon input-icon-right"
    data-toggle="dropdown"
  >
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-4"
        name="input-text-4"
        placeholder="Search..."
        type="text"
        value="foo"
      />
      <span
        class="suffix"
      >
        <i
          class="material-icons icon"
        >
          search
        </i>
      </span>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="dropdown dropdown-menu show"
    role="menu"
    style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
    tabindex="-1"
    x-placement="bottom-start"
  >
    <h6
      class="header dropdown-header"
      tabindex="-1"
    >
      <button
        aria-disabled="false"
        class="wrapper mr-2 backButton fill secondary small"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons icon small"
        >
          arrow_back
        </i>
        <span
          class="content"
        >
          Back
        </span>
      </button>
      2 sub results
    </h6>
    <button
      class="dropdownItem dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      <div>
        2 / 20
      </div>
    </button>
    <button
      class="dropdownItem dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      <div>
        2 / 21
      </div>
    </button>
  </div>
</div>
`;
